// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericInput should render correctly 1`] = `
<Label
  error={false}
>
  <LabelText>
     
    Age
     
  </LabelText>
  <HintText>
     
    Enter a value between 1 and 120
     
  </HintText>
  <Styled(Input)
    name="age"
    onChange={[Function]}
    type="number"
  />
</Label>
`;

exports[`NumericInput should render with errors 1`] = `
<Label
  error="Please enter an age between 1 and 120"
>
  <LabelText>
     
    Age
     
  </LabelText>
  <HintText>
     
    Enter a value between 1 and 120
     
  </HintText>
  <ErrorText>
    Please enter an age between 1 and 120
  </ErrorText>
  <Styled(Input)
    error="Please enter an age between 1 and 120"
    name="age"
    onChange={[Function]}
    type="number"
  />
</Label>
`;
